--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -493,61 +494,49 @@
 
   <!-- BACK TO TOP -->
   <div class="footer-top">
-    <a href="deals.html">See more</a>
+    <a href="#">Back to top</a>
   </div>
 
   <!-- MAIN FOOTER -->
-<div class="footer-main">
+  <div class="footer-main">
+    <div>
+      <h4>Get to Know Us</h4>
+      <a>Careers</a>
+      <a>Blog</a>
+      <a>About Amazon</a>
+      <a>Investor Relations</a>
+      <a>Amazon Devices</a>
+      <a>Amazon Science</a>
+    </div>
 
-  <div>
-    <h4>Get to Know Us</h4>
-    <a href="careers.html">Careers</a>
-    <a href="blog.html">Blog</a>
-    <a href="about.html">About Amazon</a>
-    <a href="investors.html">Investor Relations</a>
-    <a href="devices.html">Amazon Devices</a>
-    <a href="science.html">Amazon Science</a>
+    <div>
+      <h4>Make Money with Us</h4>
+      <a>Sell products on Amazon</a>
+      <a>Sell on Amazon Business</a>
+      <a>Sell apps on Amazon</a>
+      <a>Become an Affiliate</a>
+      <a>Advertise Your Products</a>
+      <a>Self-Publish with Us</a>
+    </div>
+
+    <div>
+      <h4>Amazon Payment Products</h4>
+      <a>Amazon Business Card</a>
+      <a>Shop with Points</a>
+      <a>Reload Your Balance</a>
+      <a>Amazon Currency Converter</a>
+    </div>
+
+    <div>
+      <h4>Let Us Help You</h4>
+      <a>Amazon and COVID-19</a>
+      <a>Your Account</a>
+      <a>Your Orders</a>
+      <a>Shipping Rates & Policies</a>
+      <a>Returns & Replacements</a>
+      <a>Help</a>
+    </div>
   </div>
-
-  <!-- INTERNAL LINKS (DEAD END FIX) -->
-  <div>
-    <h4>Quick Links</h4>
-    <a href="index.html">Home</a>
-    <a href="deals.html">Today's Deals</a>
-    <a href="electronics.html">Electronics</a>
-    <a href="fashion.html">Fashion</a>
-    <a href="home.html">Home & Kitchen</a>
-  </div>
-
-  <div>
-    <h4>Make Money with Us</h4>
-    <a href="sell.html">Sell products on Amazon</a>
-    <a href="business.html">Sell on Amazon Business</a>
-    <a href="apps.html">Sell apps on Amazon</a>
-    <a href="affiliate.html">Become an Affiliate</a>
-    <a href="advertise.html">Advertise Your Products</a>
-    <a href="self-publish.html">Self-Publish with Us</a>
-  </div>
-
-  <div>
-    <h4>Amazon Payment Products</h4>
-    <a href="business-card.html">Amazon Business Card</a>
-    <a href="points.html">Shop with Points</a>
-    <a href="reload.html">Reload Your Balance</a>
-    <a href="currency.html">Amazon Currency Converter</a>
-  </div>
-
-  <div>
-    <h4>Let Us Help You</h4>
-    <a href="covid.html">Amazon and COVID-19</a>
-    <a href="account.html">Your Account</a>
-    <a href="orders.html">Your Orders</a>
-    <a href="shipping.html">Shipping Rates & Policies</a>
-    <a href="returns.html">Returns & Replacements</a>
-    <a href="help.html">Help</a>
-  </div>
-
-</div>
 
   <!-- LOGO + LANGUAGE -->
   <div class="footer-bottom">
