--- a/lab6/index.html
+++ b/lab6/index.html
@@ -8,11 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" />
     <title>Online Shopping site in India: Shop Online for Mobiles, Books, Watches, Shoes and More - Amazon.in</title>
-
-    <!--css file-->
+    <meta name="keywords" content="Amazon.in, Online Shopping India, Mobiles, Books, Electronics, Fashion, Home & Kitchen, Deals">
+   
     <link rel="stylesheet" href="style.css" />
-
-    <!--font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -71,8 +69,6 @@
             </div>
         </div>
     </header>
-
-    <!--navigation-->
     <nav class="nav">
         <div class="container container-nav">
             <ul>
@@ -106,7 +102,6 @@
         </div>
     </nav>
 
-    <!--sidebar navigation-->
     <div class="sidebar-container-navigation" id="sidebar-container-navigation-id">
         <div class="sidebar-left-part">
             <div class="sidebar-top">
@@ -157,10 +152,6 @@
         </button>
     </div>
 
-
-
-
-    <!--image slider -->
     <section>
         <div class="image-container">
             <div class="image-list">
@@ -198,8 +189,6 @@
         </div>
     </section>
 
-
-    <!--product container card-->
     <main class="main">
         <div class="card-product-container container">
             <div class="card-product">
@@ -415,8 +404,7 @@
             </div>
         </div>
 
-    
-    <!--today's deals -->
+
     <section class="today_deals_container">
         <div class="today_deals_heading">
             <h1>Today's Deals</h1>
@@ -485,19 +473,16 @@
 </body>
 <footer class="amazon-footer">
 
-  <!-- SIGN IN PART -->
   <div class="footer-signin">
     <p>See personalized recommendations</p>
     <button>Sign in</button>
     <span>New customer? <a href="#">Start here.</a></span>
   </div>
 
-  <!-- BACK TO TOP -->
   <div class="footer-top">
     <a href="#">Back to top</a>
   </div>
 
-  <!-- MAIN FOOTER -->
   <div class="footer-main">
     <div>
       <h4>Get to Know Us</h4>
@@ -538,7 +523,6 @@
     </div>
   </div>
 
-  <!-- LOGO + LANGUAGE -->
   <div class="footer-bottom">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon">
 
