--- a/lab9/index.html
+++ b/lab9/index.html
@@ -16,21 +16,21 @@
 
         <div class="sun"></div>
 
-        <div class="planet mercury" data-name="Mercury" data-info="The smallest planet."></div>
-        <div class="planet venus" data-name="Venus" data-info="Hottest planet with toxic atmosphere."></div>
-        <div class="planet earth" data-name="Earth" data-info="Our home planet with life."></div>
-        <div class="planet mars" data-name="Mars" data-info="The Red Planet."></div>
-        <div class="planet jupiter" data-name="Jupiter" data-info="The largest planet."></div>
-        <div class="planet saturn" data-name="Saturn" data-info="Known for its rings."></div>
-        <div class="planet uranus" data-name="Uranus" data-info="Ice giant. Spins sideways."></div>
-        <div class="planet neptune" data-name="Neptune" data-info="Farthest known planet."></div>
+        <div class="planet bud" data-name="Буд" data-info="Нарны аймгийн хамгийн жижиг гариг."></div>
+        <div class="planet venus" data-name="Сугар" data-info="Халуун гариг, хорт уур амьсгалтай."></div>
+        <div class="planet earth" data-name="Дэлхий" data-info="Бидний амьдардаг гариг. Амьдралтай."></div>
+        <div class="planet mars" data-name="Ангараг" data-info="Улаан гариг."></div>
+        <div class="planet jupiter" data-name="Бархасбадь" data-info="Хамгийн том гариг."></div>
+        <div class="planet saturn" data-name="Санчир" data-info="Сарнай шиг бөгжөөрөө алдартай."></div>
+        <div class="planet uranus" data-name="Тэнгэрийн ван" data-info="Мөсөн гариг. Хажуу тийшээ эргэдэг."></div>
+        <div class="planet neptune" data-name="Далай ван" data-info="Хамгийн хол орших мэдэгдсэн гариг."></div>
 
     </div>
 
     <div class="info-panel" id="infoPanel">
         <h2 id="planetName"></h2>
         <p id="planetInfo"></p>
-        <button onclick="closeInfo()">Close</button>
+        <button onclick="closeInfo()">Хаах</button>
     </div>
 
     <script src="script.js"></script>
