--- a/lab8/index.html
+++ b/lab8/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>🐶 Dog Hangman Game</h1>
+    <h1>🐶 Nohoin uhel Hangman Game</h1>
 
     <button id="startBtn">Start Game</button>
 
